--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-CF_API_TOKEN = oZgTJAKUIy6dA3zMr1bVXPuAykXC-gFtKusru_ux
-CF_IDENTIFIER = d3ed73c73b91486414e37c157d4108e4
+CF_API_TOKEN = 
+CF_IDENTIFIER = 
